<resources>
    <string name="app_name">Mi Salud Plus</string>
    <string name="digitos0">0,1,2,3,4,5,6,7,8,9</string>
    <string name="digitos1">qwertyuiopasdfghjklñzxcvbnm, ,.</string>
    <string name="digitos2">0,1,2,3,4,5,6,7,8,9,-, ,qwertyuiopasdfghjklñzxcvbnm,,,.,QWERTYUIOPASDFGHJKLÑZXCVBNM</string>
    <string name="logueo_usr">Usuario</string>
    <string name="logueo_pss">Contraseña</string>
    <string name="logueo_reg">Registrarse</string>
    <string name="logueo_in">Ingresar</string>
    <string name="logueo_pac">Paciente</string>
    <string name="tittle_reg">Registro</string>
    <string name="tittle_lab">Mis Laboratorios</string>
    <string name="tittle_urg">Mis Urgencias</string>
    <string name="tittle_ter">Mis Terapias</string>
    <string name="tittle_oth">Servicios Especiales</string>
    <string name="tittle_odn">Odontologos</string>
    <string name="tittle_med">Mis Médicos</string>
    <string name="tittle_pas">Mis Medicamentos</string>
    <string name="subtitt_lab">Laboratorios</string>
    <string name="subtitt_urg">Urgencias</string>
    <string name="subtitt_ter">Terapias</string>
    <string name="subtitt_odn">Odontología</string>
    <string name="subtitt_med">Médicos</string>
    <string name="subtitt_pas">Medicamentos</string>
    <string name="next">Continuar</string>
    <string name="general_pago">Medios de Pago</string>
    <string name="log_usr">Documento de Identidad</string>
    <string name="log_psww">Contraseña</string>
    <string name="log_wrong">Campos de inicio de sesión incompletos</string>
    <string name="log_uwrong">Usuario No Existe</string>
    <string name="log_pwrong">Contraseña Incorrecta</string>
    <string name="log_fb">Espere un momento por favor</string>
    <string name="data_empty">Faltan Datos</string>
    <string name="calendario">Fecha de Nacimiento</string>
    <string name="cal_day">Día</string>
    <string name="cal_month">Mes</string>
    <string name="cal_year">Año</string>
    <string-array name="nwsLst">
        <item>PROMOCIÓN DEL DÍA: Al consumir el servicio de 2 consultas especializadas, tienes GRATIS una consulta médica general virtual para usted o alguno de sus familiares registrados antes de la fecha de usted tomar el primer servicio </item>
        <item>NOTICIA 2: </item>
        <item>NOTICIA 3: </item>
        <item>NOTICIA 4: </item>
        <item>NOTICIA 5: </item>
    </string-array>
    <string name="reg_mensaje">Los datos marcados con (*) son obligatorios</string>
    <string name="reg_nombre">Nombre Completo*</string>
    <string name="reg_fechanacimiento">Fecha Nacimiento*</string>
    <string name="reg_genero">Genero*</string>
    <string name="reg_documento">Documento*</string>
    <string name="reg_tipdocumento">Tipo</string>
    <string name="reg_numdocumneto">Numero</string>
    <string name="reg_expdocumento">Fecha de Expedicion*</string>
    <string name="reg_residencia">Residencia*</string>
    <string name="reg_departamento">Departamento</string>
    <string name="reg_municipio">Municipio</string>
    <string name="reg_direccion">Dirección*</string>
    <string name="reg_grupoe">Grupo Etnico</string>
    <string name="reg_estadocvl">Estado civil*</string>
    <string name="reg_eps">EPS*</string>
    <string name="reg_arl">ARL*</string>
    <string name="reg_ocupacion">Ocupación*</string>
    <string name="reg_ocupacion2">¿Cual?</string>
    <string name="reg_estrato">Estrato*</string>
    <string name="reg_correo1">Correo electrónico*</string>
    <string name="reg_correo2">Otro correo electrónico</string>
    <string name="reg_telefono">Telefonos</string>
    <string name="reg_celular">Celular*</string>
    <string name="reg_fijo1">Fijo*</string>
    <string name="reg_fijo2">Otro Fijo</string>
    <string name="reg_discapacidad">Discapacidad*</string>
    <string name="reg_discapacidad2">¿Cual?</string>
    <string name="reg_regimen">Regimen Especial</string>
    <string name="reg_wrongDoc">El Número de Documento ya se encuentra registrado</string>
    <string name="registrar">Enviar</string>
    <string name="apellido1">Primer Apellido</string>
    <string name="apellido2">Segundo Apellido</string>
    <string name="nombre1">Primer Nombre</string>
    <string name="nombre2">Segundo Nombre</string>
    <string name="dirMensaje0">Ej: CALLE 7A SUR # 42B OESTE 70 </string>
    <string name="dirMensaje1">Complemento: </string>
    <string name="dirMensaje2">Ej: Edificio Palmas, Apartamento 501</string>
    <string name="dirMensaje3">Para agregar un nombre propio (Ej: Poblado, Floresta, Los Molinos)</string>
    <string name="med_especialistas">Especialistas</string>
    <string name="med_medgeneral">Medico General</string>
    <string name="med_enfermeria">Enfermero (a)</string>
    <string name="med_otrospro">Otros Profesionales</string>
    <string name="med_opciones">Opciones Medicas</string>
    <string name="med_modalidad">Modalidad Atención</string>
    <string name="med_tipoatencion">Tipo de Atención</string>
    <string name="med_visitas">Visitas:</string>
    <string name="med_pregrado">Pregado: </string>
    <string name="med_posgrado">Posgrado: </string>
    <string name="med_servicios">Servicios: </string>
    <string name="med_acta">Acta de Grado: </string>
    <string name="med_diploma">Diploma: </string>
    <string name="med_agendar">*Los colores en gris no están disponibles </string>
    <string name="med_NotSelec">No ha seleccionó una fecha </string>
    <string name="med_Selec">Ha seleccionado la fecha: </string>
    <string name="pst_nombre">Nombre Medicamento</string>
    <string name="pst_msj1">Cuestionario de seguridad</string>
    <string name="pst_edad">Edad</string>
    <string name="pst_amed">Auto-medicación</string>
    <string name="pst_fmed">Formula Medica</string>
    <string name="pst_frec">Frecuencua de Toma</string>
    <string name="pst_frec1">Cada</string>
    <string name="pst_ci">Contraindicaciones</string>
    <string name="pst_ok">Acepto</string>
    <string name="pst_nok">Cancel</string>
    <string name="pst_viaa">Vía de Administración</string>
    <string name="pst_advertencias">Advertencias</string>
    <string name="pst_usos">Modo de Uso</string>
    <string name="pst_contraindicaciones">Advertencias/Contraindicaciones</string>
    <string name="pst_mensaje0">Recuerde que el uso de este medicamento es bajo su responsabilidad</string>
    <string name="pst_mensaje1">Estoy de acuerdo que leí y entendí la información dada del medicamento.</string>
    <string name="pst_toast">Para continuar debe estar de acuerdo de que leyó y entendió la informacion presentada.</string>
    <string name="descriptor_photo">PHOTO</string>
    <string name="descriptor_puntaje">PUNTAJE</string>
    <string name="descriptor_prev">PREVIO</string>
    <string name="descriptor_next">SIGUIENTE</string>
    <string-array name="frecuencia">
        <item>--</item>
        <item>Hora</item>
        <item>Horas</item>
        <item>Día</item>
        <item>Días</item>
        <item>Semana</item>
        <item>Mes</item>
    </string-array>
    <string-array name="especialistas">
        <item>--</item>
        <item>Alergologia</item>
        <item>Dolor y Cuidados Paliativos</item>
        <item>Medicina Del Trabajo</item>
        <item>Ortopedia y Traumatologia</item>
        <item>Anestesiologia</item>
        <item>Endocrinologia</item>
        <item>Medicina Familiar</item>
        <item>Ortopedia y Traumatologia Pediatrica</item>
        <item>Anestesiologia Cardiovascular</item>
        <item>Endocrinologia Pediatrica</item>
        <item>Medicina Fisica y Rehabilitacion</item>
        <item>Otorrinolaringologia</item>
        <item>Cardiologia</item>
        <item>Endodoncia</item>
        <item>Medicina Forense</item>
        <item>Pediatria</item>
        <item>Cardiologia Pediatrica</item>
        <item>Estomatologia y Cirugia Oral</item>
        <item>Medicina Interna</item>
        <item>Periodoncia</item>
        <item>Cirugia Cardiovascular</item>
        <item>Gastroenterologia</item>
        <item>Medicina Nuclear</item>
        <item>Psiquiatria</item>
        <item>Cirugia De Cabeza y Cuello</item>
        <item>Gastroenterologia Pediatrica</item>
        <item>Nefrologia</item>
        <item>Psiquiatria Pediatrica</item>
        <item>Cirugia De Mama y Tumores De Tejidos Blandos</item>
        <item>Genetica Medica</item>
        <item>Nefrologia Pediatrica</item>
        <item>Radiologia E Imagenes Diagnosticas</item>
        <item>Cirugia De Torax</item>
        <item>Geriatria</item>
        <item>Neonatologia</item>
        <item>Radiologia Oral y Maxilofacial</item>
        <item>Cirugia Gastrointestinal</item>
        <item>Ginecologia y Obstetricia</item>
        <item>Neumologia</item>
        <item>Radioterapia</item>
        <item>Cirugia General</item>
        <item>Hematologia</item>
        <item>Neumologia Pediatrica</item>
        <item>Rehabilitacion Oral</item>
        <item>Cirugia Maxilofacial</item>
        <item>Hematologia Pediatrica</item>
        <item>Neurocirugia</item>
        <item>Reumatologia</item>
        <item>Cirugia Oncologica</item>
        <item>Hepatologia</item>
        <item>Neurologia</item>
        <item>Reumatologia Pediatrica</item>
        <item>Cirugia Oral</item>
        <item>Infectologia</item>
        <item>Neurologia Pediatrica</item>
        <item>Salud Familiar y Comunitaria</item>
        <item>Cirugia Pediatrica</item>
        <item>Mastologia</item>
        <item>Odontopediatria</item>
        <item>Sexologia Clinica</item>
        <item>Cirugia Plastica, Estetica y reconstructiva</item>
        <item>Medicina Aeroespacial</item>
        <item>Oftalmologia</item>
        <item>Toxicologia Clinica</item>
        <item>Cirugia Vascular</item>
        <item>Medicina Alternativa (Ayurveda)</item>
        <item>Oncohematologia Pediatrica</item>
        <item>Trasplantes</item>
        <item>Coloproctologia</item>
        <item>Medicina Alternativa (Homeopatia)</item>
        <item>Oncologia</item>
        <item>Urologia</item>
        <item>Dermatologia</item>
        <item>Medicina Alternativa (Medicina Tradicional China)</item>
        <item>Oncologia Pediatrica</item>
        <item>Medicina Del Deporte</item>
        <item>Medicina Alternativa (Naturopatia)</item>
        <item>Ortodoncia</item>
    </string-array>
    <string-array name="enfermerias">
        <item>--</item>
        <item>Enfermero(a) Profesional Especializada</item>
        <item>Enfermero(a) Profesional</item>
        <item>Auxiliar de Enefermería</item>
    </string-array>
    <string-array name="otrosprofesionales">
        <item>--</item>
        <item>Fonoaudiólogo</item>
        <item>Optómetra</item>
        <item>Ortoptico</item>
        <item>Trabajo Social</item>
        <item>Psicologo(a)</item>
        <item>Neuropsicólo(a)</item>
        <item>Nutricionista</item>
        <item>Higienista Oral</item>
        <item>Auxiliar de consultorio dental</item>
        <item>Auxiliar de laboratorio Clínico</item>

    </string-array>
    <string-array name="consulta">
        <item>--</item>
        <item>Teleconsulta</item>
        <item>Telemedicina</item>
        <item>Domicilio</item>
        <item>Prioritaria (24Hrs)</item>
        <item>Prioritaria (48Hrs)</item>
        <item>No Prioritaria</item>
    </string-array>
    <string-array name="consulta_enf">
        <item>--</item>
        <item>Teleconsulta</item>
        <item>Asesoría Virtual</item>
        <item>Enfemero(a) en casa</item>
        <item>Aplicación de Medicamentos</item>
        <item>Acompañamiento de Hospitalización</item>
        <item>Acompañamiento a citas Médicas</item>
    </string-array>
</resources>