<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_weight="1"
            style="@style/txtSub2"
            android:text="@string/nombre1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            style="@style/txtSub2"
            android:layout_weight="1"
            android:text="@string/nombre2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <EditText
            android:id="@+id/idN1"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_weight="1"
            style="@style/txtSub3"
            />

        <EditText
            android:id="@+id/idN2"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_weight="1"
            style="@style/txtSub3"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_weight="1"
            style="@style/txtSub2"
            android:text="@string/apellido1"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20sp"
            style="@style/txtSub2"
            android:layout_weight="1"
            android:text="@string/apellido2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp">

        <EditText
            android:id="@+id/idA1"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_weight="1"
            style="@style/txtSub3"
            />

        <EditText
            android:id="@+id/idA2"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:layout_weight="1"
            style="@style/txtSub3"
            />

    </LinearLayout>




</LinearLayout>